Add page content

--- a/src/cover.css
+++ b/src/cover.css
@@ -25,6 +25,10 @@ body {
   max-width: 42em;
 }
 
+.page-container {
+  max-width: 64em;
+}
+
 
 /*
  * Header
@@ -116,12 +120,4 @@ body {
   --bs-btn-active-color: var(--bs-btn-hover-color);
   --bs-btn-active-bg: #5a23c8;
   --bs-btn-active-border-color: #5a23c8;
-}
-
-.bd-mode-toggle {
-  z-index: 1500;
-}
-
-.bd-mode-toggle .dropdown-menu .active .bi {
-  display: block !important;
 }
